# TER-Server_434

./: CMakeLists.txt  PreLoad.cmake  README  README.md  revision.h.in.cmake
NotFinishedWorks/C++/Cadena a twiligth/: Unit.h  npc_Samuelson.cpp  npc_anduin_wrynn_throne_and_npc_summon_anduin_wrynn_throne.cpp  npc_avionCPP.cpp
NotFinishedWorks/Sql/Cadena Twilight/: Cadena del principe SQL Support.sql  Hero's Call Twilight Highlands!.sql  My_Son_ the_Prince.sql  QUEST_THE_UNUSUAL_SOSPECTS.sql  Quest_missing_parts.sql  Rallying_the_Fleet.sql  Twilight_Investigation.sql
WOW_Client_TER_Server/Client/: Start Client.bat  WoW.mfil
WOW_Client_TER_Server/sql_база/: 200 стаков материала.sql  auth_bot.sql  для патча (сохранитель бафов).sql
cmake/: genrev.cmake  options.cmake  showoptions.cmake  stack_direction.c
cmake/macros/: FindGit.cmake
cmake/platform/: settings.cmake
dep/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt
dep/g3dlite/: G3D-v8.0_hotfix1.diff.rej  G3D-v8.0_hotfix2.diff.rej  G3D-v8.0_hotfix3.diff.rej  G3D-v8.0_hotfix4.diff.rej  G3D-v8.0_hotfix5.diff.rej  Readme.txt.rej
dep/g3dlite/include/G3D/: System.h.rej  platform.h  platform.h.rej
dep/g3dlite/source/: BinaryOutput.cpp  FileSystem.cpp  FileSystem.cpp.rej  System.cpp  System.cpp.rej
dep/mysqllite/: CMakeLists.txt
sql/base/: 2015.12.02-auth.rar  2015.12.02-char.rar  27_09_2015_auth.rar  27_09_2015_characters.rar  28.10.2015_auth.rar  28.10.2015_char.rar  auth.sql  characters.sql
sql/custom/: AVFix.sql
sql/dev/world/: 11.sql
sql/updaten_forthcoming_decision/: creature_addon.sql  creature_formation.sql  e_creature.sql  e_eguip.sql  e_gobject.sql  e_quests.sql  e_quests_object.sql  game_event.sql  game_event_creature.sql  pool_creature.sql  pool_gobject.sql  евенты_off.txt  евенты_on.txt
src/: CMakeLists.txt
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/tools/: CMakeLists.txt
(+886 files in other folders)
